(OH2-304) Change the code so that it returns the patient and their analysis instead of just analysis
