# src/main/java/org/isf/integrations/labbook/rest/LabBookPatientController.java
@@ -2,14 +2,11 @@ package org.isf.integrations.labbook.rest;
 
 import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import org.isf.integrations.labbook.models.PatientAnalysisResponse;
+import org.isf.integrations.labbook.models.PatientHistoricResponse;
 import org.isf.integrations.labbook.services.PatientSyncService;
 import org.isf.utils.exception.OHException;
 import org.springframework.http.MediaType;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
 
 @RestController
 @Tag(name = "Labbook")
@@ -24,8 +21,7 @@ public class LabBookPatientController {
 	}
 
 	@GetMapping("/patients/{id}/analysis")
-	@PreAuthorize("hasRole('ADMIN') or hasAuthority('exams.read')")
-	public List<PatientAnalysisResponse> getPatientAnalysis(@PathVariable Integer id) throws OHException {
+	public PatientHistoricResponse getPatientAnalysis(@PathVariable Integer id) throws OHException {
 		return patientSyncService.getPatientAnalysis(id);
 	}
 }
